# rust-esp32-c3-https-client

./: Cargo.toml  README.md
.cargo/: config.toml
src/: main.rs
src/certs/: www.google.com.pem
