[package]
name = "esp32-c3-https-client"
version = "0.1.0"
authors = ["Slava Dobromyslov <slava@dobromyslov.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[profile.release]
debug = true
lto = false

[profile.release.package.esp-wifi]
opt-level = 3

[profile.dev]
lto = false

[profile.dev.package.esp-wifi]
opt-level = 3

[dependencies]
esp32c3-hal = { version = "0.13.0", features = [
    "embassy-time-timg0",
    "embassy",
    "async"
] }
esp-backtrace = { version = "0.9.0", features = [
    "panic-handler",
    "print-uart",
    "exception-handler",
    "esp32c3"
] }
esp-println = { version = "0.7.1", features = [
    "esp32c3",
    "log"
] }

embassy-time = { version = "0.1.5", features = ["nightly"] }
embassy-executor = { version = "0.3.2", package = "embassy-executor", features = [
    "nightly",
    "executor-thread",
    "integrated-timers",
    "arch-riscv32"
] }
embassy-net = { version = "0.2.1", features = [
    "nightly",
    "tcp",
    "udp",
    "dhcpv4",
    "medium-ethernet",
] }

esp-wifi = { git = "https://github.com/esp-rs/esp-wifi.git", features = [
    "big-heap",
    "phy-enable-usb",
    "embedded-svc",
    "wifi",
    "esp32c3",
    "async",
    "embassy-net"
], rev = "1b3c3fcac4ebf3e493ecb0aabe1ea6c1487f5b50" }

smoltcp = { version = "0.10.0", default-features = false, features = [
    "proto-igmp",
    "proto-ipv4",
    "socket-tcp",
    "socket-icmp",
    "socket-udp",
    "medium-ethernet",
    "proto-dhcpv4",
    "socket-raw",
    "socket-dhcpv4",
] }
embedded-svc = { version = "0.26.4", default-features = false }
log = "0.4.20"
embedded-hal = "0.2.7"
embedded-io = "0.6.1"
embedded-io-async = { version = "0.6.0" }
heapless = "0.8.0"
critical-section = "1.1.2"
static_cell = { version = "=1.2", features = ["nightly"] }

esp-mbedtls = { git = "https://github.com/esp-rs/esp-mbedtls.git", features = [
    "esp32c3",
    "async"
], rev = "fcc50ea3127373480ae268b0d779126a84e89ffa" }